--- a/Supermarket sales analysis.ipynb
+++ b/Supermarket sales analysis.ipynb
@@ -21,7 +21,7 @@
     "6. Highest no. of orders palced by which segment<br>\n",
     "7. Top 10 customers placing highest no. of orders<br>\n",
     "8. Year wise sales<br>\n",
-    "9. Monthly sales for a each year \n",
+    "9. Monthly sales for each year \n",
     "\n",
     "\n"
    ]
